--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@ background-color: #fff;
             <h5 class="hh">年龄：20</h5>
             <h5 class="hh">性别：女</h5>
             
-                <div class="aaa">
+                <a href="https://jintianhaokaixinaaa.github.io/"><div class="aaa">
                     <h4>首页</h4>
-                </div>
+                    </div></a>
             <div class="hhh">
                 <h4>我的学校</h4>
             </div><div class="hhh">
