--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ background-color: #fff;
             <h5 class="hh">年龄：20</h5>
             <h5 class="hh">性别：女</h5>
             
-                <a href="https://jintianhaokaixinaaa.github.io/"><div class="aaa">
+                <a href="https://jintianhaokaixina.github.io/"><div class="aaa">
                     <h4>首页</h4>
                     </div></a>
             <div class="hhh">
